Fix layout issues
Unify HTML and CSS naming scheme (lowercase-dashed)

Compress sample script
Add autorun after edit (optional)
Add autosave after edit
Persist user preferences (last document, autorun, quiet mode)

Add download handling to PHP (not yet used)

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 html {
   font-size: 15pt;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  height: 100vh;
   color: #D4D4D4;
   background-color:  #1A1C1D;
 
@@ -7,42 +9,23 @@ html {
 }
 
 body {
-  margin: 0;
-  height: 100vh;
-  max-height: 100vh;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
-  grid-template-rows: 1fr auto;
-  column-gap: -10px;
+  margin: auto;
+  height: calc(100% - 30px);
+  max-height: calc(100% - 30px);
+  display: flex;
+  flex-flow: row;
+  flex-wrap: wrap;
+  padding: 15px;
 }
 
 h2 {
   margin: 0;
 }
-
-#leftSide {
-  padding: 15px;
-  display: flex;
-  flex-direction: column;
-}
-
-#xfstInput {
-  height: 100%;
-  margin-bottom: 10px;
-}
-
-.CodeMirror {
-  height: 100%;
-  max-height: 100%;
-  padding: 5px;
-  cursor: text;
-}
-
 .header {
+  height: auto;
   display: flex;
   justify-content: space-between;
   align-content: center;
-  margin-bottom: 10px;
 }
 
 .action-btn {
@@ -56,6 +39,7 @@ h2 {
   padding: .5em 2em;
   min-width: 150px;
   border-radius: 3px;
+  height: 2em;
 
   -webkit-box-shadow: var(--common-shadow);
 	-moz-box-shadow: var(--common-shadow);
@@ -82,18 +66,42 @@ h2 {
   min-width: 150px;
 }
 
-#rightSide {
-  padding: 15px;
+.CodeMirror {
+  height: 100%;
+  width: 49vw;
+}
+
+#script-input {
+  width: 100%;
+  margin-top: 10px;
+}
+
+#left-side {
+  flex-grow: 1;
+  flex-basis: 600px;
+  margin-right: 8px;
+}
+
+#right-side {
+  flex-grow: 1;
+  flex-basis: 600px;
+  margin-left: 8px;
+  max-height: 100%;
+
   display: flex;
   flex-direction: column;
 }
 
-#xfstOutput {
-  min-height: 30vh;
+#script-output {
+  flex-grow: 1;
+  margin-top: 10px;
   height: 100%;
+
   white-space: pre-wrap;
-  font-family: monospace;
+  font-family: 'Input', 'Fira Code', Consolas, monospace;
   line-height: 1.4em;
+
+  overflow: auto;
 
   background-color: #222425;
   -webkit-box-shadow: var(--common-shadow);
@@ -112,7 +120,6 @@ h2 {
   color: #569CD6;
 }
 
-
 .toggle {
   margin-top: 5px;
   cursor: pointer;
@@ -125,15 +132,29 @@ input:checked + .toggle-text {
 
 .toggle input,
 .file-select input {
-  width: 0;
-  height: 0;
-  opacity: 0;
+  display: none;
 }
 
-#sourceRef {
+#source-ref {
   margin-top: 5px;
   text-align: right;
   font-size: 10px;
   text-decoration: none;
   color: inherit;
+  height: 5%;
+}
+
+@media screen and (max-width: 1300px) {
+  #left-side {
+    margin-right: 0;
+    margin-bottom: 16px;
+    height: 48vh;
+  }
+  #right-side {
+    margin-left: 0;
+    height: 48vh;
+  }
+  .CodeMirror {
+    width: 97vw;
+  }
 }
